--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,11 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /blank/
+RewriteBase /wpb/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /blank/index.php [L]
+RewriteRule . /wpb/index.php [L]
 </IfModule>
 
 # END WordPress
