--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,19 @@
 
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
+Options +FollowSymLinks
 RewriteEngine On
-RewriteBase /wpb/
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /wpb/index.php [L]
+RewriteCond %{QUERY_STRING} (\<|%3C).*script.*(\>|%3E) [NC,OR]
+RewriteCond %{QUERY_STRING} GLOBALS(=|\[|\%[0-9A-Z]{0,2}) [OR]
+RewriteCond %{QUERY_STRING} _REQUEST(=|\[|\%[0-9A-Z]{0,2})
+RewriteRule ^(.*)$ index.php [F,L]
+Options All -Indexes
 </IfModule>
+<files wp-config.php>
+order allow,deny
+deny from all
+</files>
+
+
 
 # END WordPress
